# gcov-codecov

./: .gitignore  CMakeLists.txt  README.md  test.c
.github/workflows/: codecov.yaml
lib/: lib.c
